...
         />

    <Button
        android:id="@+id/Drug_Interactions_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Dictionary_Search_Bar_TxtField"
        android:layout_centerHorizontal="true"
        android:background="@drawable/g"
        android:onClick="startDrugInteractionActivity"
        android:text="Drug Interactions" />

    <EditText
...
        android:hint="Enter drug name here"
        android:inputType="textPersonName" />


    <ExpandableListView

        android:id="@+id/fDrugs_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/Dictionary_Search_Bar_TxtField"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
...
